dev.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ticketvise
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2$3
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /lti
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      # - path: /(s3/)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: s3
      #       port:
      #         number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
